# win-icon-converter

./: .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  build-release.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: icon_converter.rs  main.rs
ui/: i18n.js  index.html  main.js  styles.css
